add file: readme

--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
 </head>
 <body>
 
-
-
   <!-- maybe do a full keyboard so you can type things like
-'normal' and it will sound weird and maybe funny. but at least  noisy -->
+'normal' and it will sound weird and maybe funny -->
 
-  <div class="keyss">
+  <!-- <div class="keyss">
     <div data-key="" class="keyy">
       <kbd>key being used</kbd>
       <span class="sound">sound description</span>
     </div>
   </div>
-  <audio data-key="65" src="sounds/clap.wav"></audio>
+  <audio data-key="65" src="sounds/clap.wav"></audio> -->
 
 
-  <!-- <div class="keys">
+  <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
       <span class="sound">clap</span>
@@ -59,8 +57,8 @@
       <kbd>;</kbd>
       <span class="sound">slacker</span>
     </div>
-  </div> -->
-  <!-- <audio data-key="65" src="sounds/clap.wav"></audio>
+  </div>
+  <audio data-key="65" src="sounds/clap.wav"></audio>
   <audio data-key="83" src="sounds/hihat.wav"></audio>
   <audio data-key="68" src="sounds/kick.wav"></audio>
   <audio data-key="70" src="sounds/openhat.wav"></audio>
@@ -68,7 +66,7 @@
   <audio data-key="74" src="sounds/ride.wav"></audio>
   <audio data-key="75" src="sounds/snare.wav"></audio>
   <audio data-key="76" src="sounds/tom.wav"></audio>
-  <audio data-key="186" src="sounds/slacker.wav"></audio> -->
+  <audio data-key="186" src="sounds/slacker.wav"></audio>
 
 </body>
 </html>
